zrobiłem wstępny js z rysowaniem pixela

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-    
+    <button onclick="putPixel()">Rysuj</button>
+    <canvas id="canvas">
+
+    </canvas>
 </body>
 </html>
