usprawniłem js żeby móc zmieniać kolor piksela

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-    <button onclick="putPixel()">Rysuj</button>
+    <button onclick="putPixel(40, 40, 100, 0, 0, 0)">Rysuj</button>
     <canvas id="canvas">
 
     </canvas>
