naprawiłem błąd ze złym wyglądem piksela

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-    <button onclick="putPixel(40, 40, 100, 0, 0, 0)">Rysuj</button>
-    <canvas id="canvas">
+    <canvas id="canvas" width="512" height="512">
 
     </canvas>
+    <button onclick="putPixel(40, 40, 100, 0, 0, 0)">Rysuj</button>
+    <input type="color">
+    <input type="number">
+    <input type="number">
 </body>
 </html>
