--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <canvas id="canvas" width="512" height="512">
 
     </canvas>
-    <button onclick="putPixel(40, 40, 100, 0, 0, 0)">Rysuj</button>
+    <br>
+    <button onclick="putPixel()">Rysuj</button>
     <input type="color">
-    <input type="number">
-    <input type="number">
+    <input type="number" id="x-input">
+    <input type="number" id="y-input">
 </body>
 </html>
