dodałem link do repo

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <input type="color">
     <input type="number" id="x-input">
     <input type="number" id="y-input">
+    <a href="https://github.com/Merkury32/pixel-frac">Github repo link</a>
 </body>
 </html>
