poprawiłem link do repo i naprawiłem problem ze znikającymi pikselami

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button onclick="putPixel()">Rysuj</button>
     <input type="color">
     <input type="number" id="x-input">
-    <input type="number" id="y-input">
+    <input type="number" id="y-input"><br><br>
     <a href="https://github.com/Merkury32/pixel-frac">Github repo link</a>
 </body>
 </html>
