Dodałem działający color picker

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </canvas>
     <br>
     <button onclick="putPixel()">Rysuj</button>
-    <input type="color">
+    <input type="color" id="color-picker">
     <input type="number" id="x-input">
     <input type="number" id="y-input"><br><br>
     <a href="https://github.com/Merkury32/pixel-frac">Github repo link</a>
