zmieniłem nazwy inputów i ich odczyty dodałem do innej funkcji

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </canvas>
     <br>
     <button onclick="putPixel()">Rysuj</button>
-    <input type="color" id="color-picker">
-    <input type="number" id="x-input">
-    <input type="number" id="y-input"><br><br>
+    <input type="color" id="colorPicker">
+    <input type="number" id="xInput">
+    <input type="number" id="yInput"><br><br>
     <a href="https://github.com/Merkury32/pixel-frac">Github repo link</a>
 </body>
 </html>
