--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     </canvas>
     <script src='main.js'></script>
     <br>
-    <button onclick="drawLine()">Rysuj</button>
+    <button onclick="putPixel()">Pixel</button>
+    <button onclick="drawLine()">Linia</button>
     <input type="color" id="colorPicker">
     <input type="number" id="xInput">
     <input type="number" id="yInput"><br><br>
