--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Pixel-frac</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js?202003061653"></script>
 </head>
 <body>
     <canvas id="canvas" width="512" height="512">
 
     </canvas>
-    <script src='main.js'></script>
+    <script src='main.js?202003061653'></script>
     <br>
     <button onclick="putPixel()">Pixel</button>
     <button onclick="drawLine()">Linia</button>
