--- a/index.html
+++ b/index.html
@@ -15,14 +15,21 @@
     <script src='main.js?202012031019'></script>
     <br>
     <button onclick="putPixel()">Pixel</button>
-    <input type="color" id="colorPicker">
+
     <input type="number" id="xInput">
     <input type="number" id="yInput"><br><br>
-    <button onclick="drawLine()">Linia</button>
+
+    <button onclick="draw()">Linia</button>
+
+    <input type="color" id="colorPicker" colorformat="hexa">
+    <input type="range" id="alphaPicker" min="0" max="255">
     <input type="number" id="x1Input" placeholder="Wpisz początek linii X">
     <input type="number" id="y1Input" placeholder="Wpisz początek linii Y">
     <input type="number" id="x2Input" placeholder="Wpisz koniec linii X">
     <input type="number" id="y2Input" placeholder="Wpisz koniec linii Y"><br><br>
+
+    <button onclick="hexToRgb()">Kolor</button>
+
     <a href="https://github.com/Merkury32/pixel-frac">Github repo link</a>
 </body>
 </html>
